# metasweep

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml  npm-publish.yml  release.yml
include/metadata_tool/: version.hpp
policies/: aggressive.yaml  safe.yaml
src/: main.cpp
src/backends/: audio_taglib.cpp  audio_taglib.hpp  image_exiv2.cpp  image_exiv2.hpp  pdf_info.cpp  pdf_info.hpp  zip_minizip.cpp  zip_minizip.hpp
src/cli/: commands.cpp  commands.hpp
src/core/: detect.cpp  detect.hpp  policy.cpp  policy.hpp  report.cpp  report.hpp  sanitize.cpp  sanitize.hpp
src/util/: fs.cpp  fs.hpp
tools/npm/: README.md  install.js  package.json
